<resources>
    <string name="app_name">FitTrack</string>
    <string name="workout">Workout</string>
    <string name="diet">Diet</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="signout">Signout</string>
    <string name="sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="button">Button</string>
    <string name="breakfast">Breakfast</string>
</resources>